[gd_scene load_steps=6 format=2]

[ext_resource path="res://Common/Player/ShotGun/Shotgun.png" type="Texture" id=1]
[ext_resource path="res://Common/Experimental/ProtoUpgradeGun/ProtoGunExtension.gd" type="Script" id=2]
[ext_resource path="res://Common/Experimental/ProtoUpgradeGun/BarrelAugment/ShotGunBarrelAugment.tscn" type="PackedScene" id=3]
[ext_resource path="res://Common/Experimental/ProtoUpgradeGun/Projectiles/Pellets.tscn" type="PackedScene" id=4]
[ext_resource path="res://Common/Experimental/ProtoUpgradeGun/GunPickups/GunUpgradePickup.tscn" type="PackedScene" id=5]

[node name="ProtoGunExtension" type="Node2D"]
script = ExtResource( 2 )
pickup_template = ExtResource( 5 )
default_projectile = ExtResource( 4 )
default_barrel_augment = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="FireRateTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="Components" type="Node" parent="."]

[node name="Pivot" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="Pivot"]
modulate = Color( 0, 1, 0.27451, 1 )
position = Vector2( 6, 1 )
texture = ExtResource( 1 )

[node name="BulletSpawn" type="Position2D" parent="Pivot"]
position = Vector2( 16, 0 )

[connection signal="timeout" from="FireRateTimer" to="." method="_on_FireRateTimer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
